--- a/app/design/frontend/default/rooja/template/customer/widget/mobile.phtml
+++ b/app/design/frontend/default/rooja/template/customer/widget/mobile.phtml
@@ -24,9 +24,9 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-	<div class="field phone_number">
-        <label for="<?php echo $this->getFieldId('mobile')?>" class="required"><?php echo $this->__('Mobile') ?></label>
-        <div class="input-box">
-            <input type="text" id="<?php echo $this->getFieldId('mobile')?>" name="<?php echo $this->getFieldName('mobile')?>" value="<?php echo $this->htmlEscape($this->getObject()->getMobile()) ?>" title="<?php echo $this->__('mobile') ?>" class="input-text required-entry" <?php if (!$this->helper('customer')->isLoggedIn() ) {echo 'placeholder="Mobile "';} ?> <?php echo $this->getFieldParams() ?> />
-        </div>
-    </div>
+	<!--<div class="field phone_number">
+        <label for="<?php //echo $this->getFieldId('mobile')?>" class="required"><?php //echo $this->__('Mobile') ?></label>
+        <div class="input-box">-->
+            <input type="text" id="<?php echo $this->getFieldId('mobile')?>" name="<?php echo $this->getFieldName('mobile')?>"  title="<?php echo $this->__('mobile') ?>" class="input-text required-entry" <?php if (!$this->helper('customer')->isLoggedIn() ) {echo 'placeholder="Mobile "';} ?> <?php echo $this->getFieldParams() ?> />
+        <!--</div>
+    </div>-->
