Fixed - Login Placeholder issue for IE

--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -264,3 +264,9 @@ jQuery(function() {
 </div>
 </div>
 </div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+<script src="http://webcloud.se/code/jQuery-Placeholder/jquery.placeholder.js"></script> 
+<script> 
+var j = jQuery.noConflict();
+	j('input[placeholder], textarea[placeholder]').placeholder(); 
+</script>
