--- a/app/design/frontend/default/rooja/template/page/1column-homestatic.phtml
+++ b/app/design/frontend/default/rooja/template/page/1column-homestatic.phtml
@@ -350,3 +350,9 @@ P.S. Hurry!"/>
 	//	elem.writeAttribute('action', 'thankyou'); 
 
 </script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+<script src="http://webcloud.se/code/jQuery-Placeholder/jquery.placeholder.js"></script> 
+<script> 
+var j = jQuery.noConflict();
+	j('input[placeholder], textarea[placeholder]').placeholder(); 
+</script>
