--- a/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
+++ b/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
@@ -639,6 +639,7 @@ margin:0px!important;
 	font-size:14px;
 	cursor:pointer;
 	padding:10px;
+	height:35px;
 }
 
 #rooja_signup_input_block {
@@ -773,7 +774,7 @@ margin:0px!important;
 	border:solid 1px #472652;
 	width:238px;
 	color:#000!important;
-	padding:10px;
+	padding:9px 10px 10px 10px;
 }
 
 .rooja_signup_mobile span {
@@ -793,8 +794,9 @@ margin:0px!important;
 	border:solid 1px #472652;
 	width:189px;
 	color:#472652;
-    padding: 5px !important;
-	margin-top:9px;
+    padding: 5px 5px 7px 5px !important;
+	margin-top:0px;
+	height:35px;
 }
 
 .customer-name .field:first-child{
@@ -885,3 +887,7 @@ margin:0px!important;
 }
 
 /*====================================== END NEW LOGIN & SIGNUP PAGE ===============================*/
+
+
+
+
