--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -437,8 +437,7 @@ strong{font-weight:bold;}
 
 #MyBetaList a#MyBetaList-referrer-link:link, #MyBetaList a#MyBetaList-referrer-link:visited{color:#24112a !important;}
 .twitter-share-button, .twitter-count-none{margin-top:-1px;}
-.alignRight{text-align:right;border-bottom:5px solid #3b2243;margin-bottom:20px;padding-bottom:20px;} 
-
+.alignRight{text-align:right;border-bottom:5px solid #3b2243;margin-bottom:20px;padding-bottom:20px;}
 
 
 /*====================================== NEW LOGIN & SIGNUP PAGE ===============================*/
@@ -708,6 +707,7 @@ margin:0px!important;
 	font-size:14px;
 	cursor:pointer;
 	padding:10px;
+	height:35px;
 }
 
 #rooja_signup_input_block {
@@ -842,7 +842,7 @@ margin:0px!important;
 	border:solid 1px #472652;
 	width:238px;
 	color:#000!important;
-	padding:10px;
+	padding:9px 10px 10px 10px;
 }
 
 .rooja_signup_mobile span {
@@ -863,7 +863,9 @@ margin:0px!important;
 	width:189px;
 	color:#472652;
     padding: 5px !important;
-	margin-top:9px;
+	margin-top:0px;
+	height:35px;
+	padding: 5px 5px 7px 5px !important;
 }
 
 .customer-name .field:first-child{
