Fancybox onclose undefined

--- a/app/design/frontend/default/rooja/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/default/rooja/template/onestepcheckout/checkout.phtml
@@ -72,10 +72,7 @@ $helper = Mage::helper('onestepcheckout/checkout');
 
 		jQuery("#azcodelink").fancybox({
 			'scrolling'     : 'no',
-			'titleShow'     : false,
-			'onClosed'      : function() {		
-				//$("#login_error").hide();
-			}
+			'titleShow'     : false
 		});
 		jQuery("#sendmail").click(function () {
 			var e = document.forms['zipcode_form'].elements;
